--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
 {
-  "name": "B.M.B-TECH",
-  "description": "ʙᴇsᴛ ᴡʜᴀᴛsᴀᴘᴘ ʙᴏᴛ ᴅᴇᴠᴇʟᴏᴘᴇᴅ ʙʏ ʙᴍʙ ᴛᴇᴄʜ 🇹🇿",
-  "keywords": ["bot", "node", "baileys", "whatsapp"],
-  "logo": "https://files.catbox.moe/hflcbc.jpg",
-  "repository": "https://github.com/ekitale/maths-project",
-  "succes_url": "/",
-  "stack": "heroku-24",
-  "env": {
+  "name":"BMB-TECH",
+  "description":"tryphonee",
+  "keywords":["bot","node","baileys","whatsapp"],
+  "logo":"https://i.ibb.co/pvKHf9LV/IMG-20250704-WA0263.jpg",
+  "repository":"https://github.com/dev-bmbtech/BMB-TECH",
+  "succes_url":"/",
+  "stack":"container",
+  "env":{
     "PREFIX": {
       "description": "choose your prefix of bot",
       "value": ".",
@@ -15,11 +15,6 @@
     "AUTO_READ_STATUS": {
       "description": "Your contact status will be read automatically(type yes to active or no to deactive ; don't write in capital letter)",
       "value": "yes",
-      "required": false
-    },
-    "AUTO_DOWNLOAD_STATUS": {
-      "description": "Your contact status will be download automatically and send to you(type yes to active or no to deactive ; don't write in capital letter)",
-      "value": "no",
       "required": false
     },
     "AUTO_READ": {
@@ -64,7 +59,7 @@
     },
     "HEROKU_API_KEY": {
       "description": "insert your heroku api-key (this is optionnal)",
-      "value": "",
+      "value": "HRKU-6930f8d0-3dde-4024-8bc5-ea03012e0fc1",
       "required": false
     },
     "HEROKU_APP_NAME": {
@@ -79,12 +74,12 @@
     "OWNER_NAME": {
       "desc": "Your Name",
       "required": false,
-      "value": "𝙱.𝙼.𝙱-𝚇𝙼𝙳"
+      "value": "𝙱.𝙼.𝙱-𝚃𝙴𝙲𝙷"
     },
     "NUMERO_OWNER": {
-      "desc": "Your number , dont put '+' and put you area code(exemple of kenya '254')",
+      "desc": "Your number , dont put '+' and put you area code(exemple of Tanzania '255')",
       "required": true,
-      "value": "255767××××"
+      "value": "255"
     },
     "WARN_COUNT": {
       "desc": "this is the limit of warn for warning commandes",
@@ -106,31 +101,23 @@
       "value": "no",
       "required": true
     },
-    "AUTO_SAVE_CONTACTS": {
-      "description": "Enable automatic saving of contacts (yes = active, no = deactive)",
-      "value": "yes",
-      "required": false
-    },
-    "CHATBOT": {
-      "description": "Turn on the chatbot reply system (yes = active, no = deactive)",
-      "value": "yes",
-      "required": false
-    },
     "AUTO_BIO": {
       "description": "Enable automatic bio update (yes = active, no = deactive)",
       "value": "yes",
       "required": false
     }
   },
-  "buildpacks": [
+
+  "formation": {
+		"worker": {
+			"quantity": 1,
+			"size": "basic"
+		}
+	},
+
+  "addons":[
     {
-      "url": "heroku/nodejs"
-    },
-    {
-      "url": "https://github.com/heroku/heroku-buildpack-nodejs.git"
-    },
-    {
-      "url": "https://github.com/heroku/heroku-buildpack-nodejs.git"
+      "plan":"heroku-postgresql"
     }
   ]
-  }
+}
