--- a/exemple_de_set.env
+++ b/exemple_de_set.env
@@ -1,20 +1,14 @@
-OWNER_NAME="B.M.B-TECH"
+OWNER_NAME="BMB-TECH"
 PREFIX="."
-CHATBOT="yes"
-AUTO_BIO="yes"
-PUBLIC_MODE='yes'
-AUDIO_REPLY='yes'
-AUTO_READ_STATUS="yes"
-AUTO_SAVE_CONTACTS= "yes"
-BMB_ANTIDELETE= "yes"
-AUTO_DOWNLOAD_STATUS="no"
-BOT_NAME="B.M.B-TECH"
-IMAGE_MENU= "https://files.catbox.moe/8qq3l4.jpg"
-NUMERO_OWNER= "255767862487"
-OWNER_NAME="᚛B.M.B-TECH᚜"
-DATABASE_URL="postgresql://postgres:bKlIqoOUWFIHOAhKxRWQtGfKfhGKgmRX@viaduct.proxy.rlwy.net:47738/railway"
+PUBLIC_MODE='non'
+AUTO_READ_STATUS="non"
+AUTO_DOWNLOAD_STATUS="oui"
+BOT_NAME= "MATELE-TMD"
+IMAGE_MENU= "https://i.ibb.co/pvKHf9LV/IMG-20250704-WA0263.jpg"
+NUMERO_OWNER= "255767862457"
+OWNER_NAME= "᚛B.M.B-TECH᚜"
+DATABASE_URL= ""
 WARN_COUNT= ""
 OPENAI_API_KEY= ""
 STARTING_BOT_MESSAGE='yes'
 ANTI_DELETE_MESSAGE='yes'
-SESSION_ID=''
