--- a/settings.env
+++ b/settings.env
@@ -1,4 +1,4 @@
-OWNER_NAME="B.M.B-TECH"
+OWNER_NAME="𝐛𝐦𝐛 𝐭𝐞𝐜𝐡"
 PREFIX="."
 CHATBOT="yes"
 AUTO_BIO="yes"
@@ -8,10 +8,9 @@ AUTO_READ_STATUS="yes"
 AUTO_SAVE_CONTACTS= "yes"
 BMB_ANTIDELETE= "yes"
 AUTO_DOWNLOAD_STATUS="no"
-BOT_NAME="B.M.B-TECH"
+BOT_NAME="𝐛𝐦𝐛 𝐭𝐞𝐜𝐡"
 IMAGE_MENU= "https://files.catbox.moe/8qq3l4.jpg"
 NUMERO_OWNER= "255767862487"
-OWNER_NAME="᚛B.M.B-TECH᚜"
 DATABASE_URL="postgresql://postgres:bKlIqoOUWFIHOAhKxRWQtGfKfhGKgmRX@viaduct.proxy.rlwy.net:47738/railway"
 WARN_COUNT= ""
 OPENAI_API_KEY= ""
