--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
     "yargs": "^17.3.1",
     "youtube-yts": "^2.0.0",
     "yt-search": "^2.10.4",
+    "gifted-btns": "^1.0.0",
     "youtubedl-core": "^4.11.7"
   }
 }
